--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "connext-sdk",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "shivam",
-  "license": "MIT",
-  "type": "module",
+  "name": "node-examples",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "build": "tsc && node dist/xtransfer.js",
-    "xtransfer": "node dist/xtransfer.js"
-  },
-  "devDependencies": {
-    "@types/chai": "^4.3.4",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^18.13.0",
-    "typescript": "^4.9.5"
+    "start": "node ./bin/www"
   },
   "dependencies": {
-    "@connext/sdk": "^0.2.7-alpha.1",
-    "ethers": "5.4"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1"
   }
 }
