--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "type": "module",
   "scripts": {
     "build": "tsc && node dist/xtransfer.js",
-    "xtransfer": "node dist/xtransfer.js"
+    "xtransfer": "node dist/xtransfer.js",
+    "start": "ts-node ./src/index.ts"
   },
   "devDependencies": {
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.13.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
