--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "node-examples",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "tsc && node dist/xtransfer.js",
     "xtransfer": "node dist/xtransfer.js",
